<resources>
    <string name="app_name">MusicLife</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_name">Song Name</string>
    <string name="song_albam">Song Albam</string>
    <string name="douration">Douration</string>
    <string name="total_songs">Total Songs</string>
    <string name="playlist">PlayList</string>
    <string name="favourites">Favourites</string>
    <string name="shuffle">Shuffle</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_is_life">Music Is Life</string>
    <string name="play_list_name">Play List Name</string>
    <string name="your_name">Your Name</string>
    <string name="add_song">Add Song</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic">Topic i.e. Suggestion or Error Ext....</string>
    <string name="email_address">Email Address(Optional)</string>
    <string name="send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="version_name">Version Name</string>
    <string name="sort_by">Sort By</string>

</resources>