<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_min_15"
            android:layout_height="24dp"
            android:contentDescription="@string/min_15"
            android:src="@drawable/baseline_timer_24"
            android:layout_margin="8dp"
            app:tint="@color/background"
            android:layout_width="24dp"/>

        <TextView
            android:paddingTop="5dp"
            android:id="@+id/text_min_15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/min_15"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_min_30"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/min_30"
            android:src="@drawable/baseline_timer_24"
            android:layout_margin="8dp"
            app:tint="@color/background" />

        <TextView
            android:paddingTop="5dp"
            android:id="@+id/text_min_30"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/min_30"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_min_60"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/min_60"
            android:src="@drawable/baseline_timer_24"
            android:layout_margin="8dp"
            app:tint="@color/background" />

        <TextView
            android:paddingTop="5dp"
            android:id="@+id/text_min_60"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/min_60"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>