<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="MainActivity"
    android:orientation="vertical"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/shufflebtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/baseline_shuffle_24"
                    android:text="@string/shuffle"
                    android:textAllCaps="false"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/favotitesbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/baseline_favorite_24"
                    android:text="@string/favourites"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/playlistbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/baseline_library_music_24"
                    android:text="@string/playlist"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/totalsong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total_songs"
                android:textColor="#000000"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:scrollbarThumbVertical="@drawable/baseline_check_box_outline_blank_24"
                android:scrollbars="vertical"
                tools:listitem="@layout/music_rv" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:name="com.example.musiclife.NowPlayingFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout="@layout/fragment_now_playing" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nave_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="100dp"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nave_hader"
        app:menu="@menu/navegation_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>