<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayListDetails">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PlayListDetails_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="280dp"
        android:scrollbarThumbVertical="@drawable/baseline_check_box_outline_blank_24"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Details" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtnPD"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/PlayList_nameHPD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:text="@string/playlist"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout_Details"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/PlayListImgPD"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/PlayList_namePD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center|start"
            android:text="@string/play_list_name"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffle_PlayListBtnPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        app:icon="@drawable/baseline_shuffle_24"
        app:iconSize="35dp"
        app:iconTint="@color/background"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Details"
        app:layout_constraintVertical_bias="0.944"
        app:strokeColor="@color/background"
        app:strokeWidth="2dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_PlayListBtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/baseline_add_24"
            android:drawableTint="@color/background"
            android:text="@string/add_song"
            android:textAllCaps="false"
            android:textColor="#000000"
            tools:ignore="RtlHardcoded" />



        <Button
            android:id="@+id/delete_PlayListPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/baseline_delete_24"
            android:drawableTint="@color/background"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>